--- a/index.html
+++ b/index.html
@@ -26,24 +26,28 @@
         <img src="images/logo.svg" alt="Easybank" />
   
       </a>
-      <a href="#" class="header_menu">
-        <span></span>
+      <a  id="btnHamburger" href="#" class="header_menu hide-for-desktop">
+        <span ></span>
         <span></span>
         <span></span>
         
       </a>
+      <div  class="header_links hide-for-mobile">
+          <a href="#">Home</a>
+          <a href="#">Abount</a>
+          <a href="#">Contact</a>
+          <a href="#">Blog</a>
+          <a href="#">Careers</a>
+
+      </div>
+
+      <a href="#" class="button header_cta hide-for-mobile">Request Invite</a>
 
     </nav>
 
   </header>
   <!--
-  Home
-  About
-  Contact
-  Blog
-  Careers
-
-  Request Invite
+  
 
 
 
@@ -113,11 +117,11 @@
   Request Invite
 
   © Easybank. All Rights Reserved
-  -->
+  
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">Your Name Here</a>.
-  </div>
+  </div>-->
   <sript src="/app/js/script.js"></sript>
 </body>
 </html>
